# qt5Example

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.conan/profiles/: gcc10  gcc8  linux-armv7hf-gcc7  mingw64
.github/workflows/: c-cpp.yml  main.yml
include/: qt5Example.h
inner/qt5ExampleConsumer/: CMakeLists.txt  conanfile.py
inner/qt5ExampleConsumer/include/: qt5ExampleConsumer.h
inner/qt5ExampleConsumer/src/: main.cpp  qt5ExampleConsumer.cpp
src/: Employee.cpp  main.cpp  mainwindow.h  qt5Example.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
